fixed exodia getting his legs cut off

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -5,11 +5,11 @@
   flex-direction: column;
 }
 .title-background {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   background-image: url("/images/titleBackground.png");
   background-size: contain;
   background-repeat: no-repeat;
